--- a/index.html
+++ b/index.html
@@ -346,11 +346,229 @@
                         </div>
                     </div>
                 </div>
-<!--                <a href="" class="block-text__button button_down">BUY</a>-->
+                <!--                <a href="" class="block-text__button button_down">BUY</a>-->
             </section>
-
+            <!--FAQ-->
+            <section class="FAQ">
+                <div class="FAQ__container">
+                    <div class="__header header-block header-block_FAQ">
+                        <h2 class="header-block__title">FAQ</h2>
+                    </div>
+                    <div class="FAQ__item item-FAQ">
+                        <div class="FAQ__content">
+                            <ul class="FAQ_ul">
+                                <li class="FAQ__text_content_1">How many times a year can I see a therapist or
+                                    pediatrician under this program?
+                                </li>
+                                <li class="FAQ__text_content_2">The number of applications is not limited during the
+                                    entire term of the contract
+                                </li>
+                                <li class="FAQ__text_content">How many times a year can I visit a specialist?
+                                </li>
+                                <li class="FAQ__text_content">How to get a doctor's advice?
+                                </li>
+                                <li class="FAQ__text_content">What specialist doctors are represented in the
+                                    service, except for the therapist and pediatrician?
+                                </li>
+                                <li class="FAQ__text_content">How to get a consultation from a pediatrician if the
+                                    child is less than 1 year old and it is impossible to apply for a program for the
+                                    child?
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!--Insured-->
+            <section class="insured">
+                <div class="insured__container">
+                    <div class="__header header-block header-block_insured">
+                        <h2 class="header-block__title">What to do if an insured event occurs?</h2>
+                    </div>
+                    <div class="insured__body">
+                        <div class="insured__column">
+                            <div class="insured__item item-insured">
+                                <div class="insured__icon">
+                                    <img src="img/svg/insured/phonecall.svg" alt="call">
+                                </div>
+                                <div class="insured__content">
+                                    <div class="insured__text">Call us</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="insured__column">
+                            <div class="insured__item item-insured item-insured-yellow">
+                                <div class="insured__icon">
+                                    <img src="img/svg/insured/docs.svg" alt="docs">
+                                </div>
+                                <div class="insured__content">
+                                    <div class="insured__text">Fill out an application</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="insured__column">
+                            <div class="insured__item item-insured">
+                                <div class="insured__icon">
+                                    <img src="img/svg/insured/comment.svg" alt="comment">
+                                </div>
+                                <div class="insured__content">
+                                    <div class="insured__text">Check the issue resolution status</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="insured__column">
+                            <div class="insured__item item-insured">
+                                <div class="insured__icon">
+                                    <img src="img/svg/insured/box.svg" alt="box">
+                                </div>
+                                <div class="insured__content">
+                                    <div class="insured__text">Full archive all conditions</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!--View-->
+            <section class="view">
+                <div class="view__container">
+                    <div class="insurance__body">
+                        <div class="view__column">
+                            <div class="__header header-block header-block_view">
+                                <h2 class="header-block__title">View full product presentation</h2>
+                            </div>
+                            <a href="" class="block-text__button button">Download PDF</a>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!--Clarify-->
+            <section class="clarify">
+                <div class="clarify__container">
+                    <div class="clarify__body">
+                        <div class="clarify__column">
+                            <div class="__header header-block header-block_clarify">
+                                <h2 class="header-block__title">Clarify details</h2>
+                            </div>
+                            <div class="header-block__sub-text">If you didn't find the answer to your question, please
+                                fill out this form and we will get back to you as soon as possible.
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!--            -->
+            <section class="">
+                <div class="protection__container">
+                    <div class="protection__content">
+                        <a href="" class="block-text__button button">Clear</a>
+                        <a href="" class="block-text__button button">Further</a>
+                    </div>
+                    <div class="protection__image">
+                        <img src="img/svg/clarify/lupa.svg" alt="woman">
+                    </div>
+                </div>
+            </section>
         </div>
     </main>
+    <footer class="footer">
+        <div class="footer__top">
+            <div class="footer__main _container">
+                <div class="footer__row">
+                    <div class="footer__column">
+                        <div class="footer_label footer_label_pad">Home</div>
+                        <nav class="footer__menu menu-footer">
+                            <ul class="menu-footer__list">
+                                <li class="menu-footer__item">
+                                    <a href="" class="menu-footer__link">About Us</a>
+                                </li>
+                                <li class="menu-footer__item">
+                                    <a href="" class="menu-footer__link">News</a>
+                                </li>
+                                <li class="menu-footer__item">
+                                    <a href="" class="menu-footer__link">Special offers</a>
+                                </li>
+                                <li class="menu-footer__item">
+                                    <a href="" class="menu-footer__link">Business offer</a>
+                                </li>
+                                <li class="menu-footer__item">
+                                    <a href="" class="menu-footer__link">Your future</a>
+                                </li>
+                                <li class="menu-footer__item">
+                                    <a href="" class="menu-footer__link">Protecting yourself and loved ones</a>
+                                </li>
+                                <li class="menu-footer__item">
+                                    <a href="" class="menu-footer__link">Employee Protection</a>
+                                </li>
+                            </ul>
+                        </nav>
+                    </div>
+                    <div class="footer__column">
+                        <div class="footer_label footer_label_underline menu-footer__link_grey">Insurance <br>documentation
+                        </div>
+                        <nav class="footer__menu menu-footer">
+                            <ul class="menu-footer__list">
+                                <li class="menu-footer__item">
+                                    <a href="" class="menu-footer__link">Financial indicators</a>
+                                </li>
+                                <li class="menu-footer__item">
+                                    <a href="" class="menu-footer__link">Contacts</a>
+                                </li>
+                                <li class="menu-footer__item">
+                                    <a href="" class="menu-footer__link">Site Map</a>
+                                </li>
+                            </ul>
+                        </nav>
+                    </div>
+                    <div class="footer__column">
+                        <div class="footer_label menu-footer__link_grey">125252, Moscow, <br>st. Zorge, 22 A, office 811
+                        </div>
+                        <nav class="footer__menu menu-footer">
+                            <ul class="menu-footer__list">
+                                <li class="menu-footer__item">
+                                    <a href="" class="menu-footer__link_grey menu-footer__link">Main office hours
+                                        125252, Moscow, st. Zorge, 22
+                                        A, office 811 Mon. - Thu. from 9:00 to 18:00 Fri. from 9:00 to 16:45 Sat-Sun day
+                                        off</a>
+                                </li>
+                                <li class="menu-footer__item">
+                                    <a href="" class="block-text__button button">How to get there</a>
+                                </li>
+                            </ul>
+                        </nav>
+                    </div>
+                    <div class="footer__column">
+                        <div class="footer_label menu-footer__link_grey">Postal address:
+                            125252, Moscow, PO Box 28
+                        </div>
+                        <div class="footer__contacts">
+                            <a href="tel:74959671301" class="contacts-footer__item contacts-footer__item_telefon">тел.:
+                                +7
+                                495 967 13 01</a>
+                            <a href="mailto:info@prolife.ru"
+                               class="contacts-footer__item contacts-footer__item_email">Email для связи с нами
+                                info@prolife.ru</a>
+                        </div>
+                        <div class="footer__social social">
+                            <a href="" class="social__item">
+                                <img src="img/svg/social/net.svg" alt="net">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="footer__line"></div>
+        <div class="footer__bottom">
+            <div class="footer__container _container">
+                <div class="footer__copy">© 1998 – 2021 LLC IC "DELO LIFE". All rights reserved. Full or partial copying
+                    of any materials of the site is prohibited. LLC IC DELO LIFE operates on the basis of licenses of
+                    the Central Bank of the Russian Federation: СЖ No. 3870 dated 03/24/2017СЛ No. 3870 dated 03/24/2017
+                    The address of the official website of the Bank of Russia is www.cbr.ru.
+                </div>
+            </div>
+        </div>
+    </footer>
 </div>
 <script src="js/script.js"></script>
 </body>
